--- a/dna.html
+++ b/dna.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Futuristic Bio-Tech Access</title>
+  <title>The Ecom Accelerator</title>
   <!-- Import a modern, bold font -->
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
   <style>
@@ -71,7 +71,7 @@
       outline: none;
       transition: border-color 0.3s ease;
     }
-    .card input[type="password"]:focus {
+    .card input[type="20% OFF"]:focus {
       border-color: #00ff00;
     }
     .card input[type="submit"] {
@@ -148,8 +148,8 @@
   
   <!-- Password Entry Card -->
   <div class="card" id="entryCard">
-    <h1>Bio-Tech Access</h1>
-    <p>Enter password to connect with the neural network.</p>
+    <h1>The Ecom Accelerator</h1>
+    <p>Enter Password to Scale your Shopify Brand.</p>
     <form id="accessForm">
       <input type="password" placeholder="Password" required>
       <input type="submit" value="Submit">
